--- a/cursos/espanol/datascience/0_intro.ipynb
+++ b/cursos/espanol/datascience/0_intro.ipynb
@@ -101,7 +101,22 @@
    "id": "d2f080ff-c7cd-4b2c-9acd-615afcd039a9",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "#@title Solucion Ejercicio {display-mode:\"form\"}\n",
+    "\n",
+    "# Puedo elegir el telefono que mas se parece y elegir el mismo precio\n",
+    "# Puedo elegir los 2 o 3 telefonos que mas se le parecen y hacer un promedio del precio\n",
+    "# Y asi varios metodos que iremos viendo.\n",
+    "# Cualquiera que se te haya ocurrido esta bien"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d178d6c8-1926-4075-ac86-c11849efe2c7",
+   "metadata": {},
+   "source": [
+    "Lo que acabas de inventar para decir cual seria el mejor precio para el telefono es conocido como algoritmo de Machine Learning cuando lo implementas con codigo de programacion. Ya hay muchos algoritmos de ML implementados que los podemos ver como cajas negras a los cuales les pasamos datos y nos devuelven una prediccion para nuevos valores."
+   ]
   },
   {
    "cell_type": "markdown",
@@ -122,7 +137,24 @@
     "- Adivinar la edad de una persona\n",
     "- Adivinar si el semaforo esta rojo o verde\n",
     "- Adivinar si a alguien le va a gustar un producto o no\n",
-    "- ...\n",
+    "- ..."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "20ef1fef-1471-4193-8f3d-58c13a97abf0",
+   "metadata": {},
+   "source": [
+    "### El Proceso del Machine Learning consta de los siguientes pasos:\n",
+    "\n",
+    "1. Entender el problema\n",
+    "2. Obtener los datos\n",
+    "3. Tranformar los datos en una tabla\n",
+    "4. Separar dicha tabla en dos tablas una de Entrenamiento (Train) y otra de Prueba (Test)\n",
+    "5. Pasarle la tabla de Entrenamiento a una caja negra (esta caja negra contiene un algoritmo de ML)\n",
+    "6. Una vez entrenada la caja negra pasarle la tabla de Prueba\n",
+    "7. Medir que tan buenas son las predicciones de la caja negra\n",
+    "8. Si las predicciones son lo suficientemente buenas utilizar esta caja negra entrenada para predecir nuevos valores\n",
     "\n",
     "**En las siguientes unidades veremos como implementarlo paso a paso**"
    ]
