--- a/cursos/espanol/datascience/1.1_jugando_con_pandas.ipynb
+++ b/cursos/espanol/datascience/1.1_jugando_con_pandas.ipynb
@@ -67,7 +67,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 9,
    "id": "651babe9-c4de-4999-878f-e333d9149802",
    "metadata": {},
    "outputs": [],
@@ -93,7 +93,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 10,
    "id": "e54842bb-c2d0-4590-ac21-872862905f25",
    "metadata": {},
    "outputs": [
@@ -206,7 +206,7 @@
        "7      256   <NA>         True            Bueno  422.60"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -225,7 +225,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 11,
    "id": "760b1562-6fd7-4f27-a594-ca44907d7875",
    "metadata": {},
    "outputs": [
@@ -243,7 +243,7 @@
        "Name: Color, dtype: object"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -264,18 +264,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "id": "5f0a36a4-8165-4693-94f7-aebeb1b7164b",
    "metadata": {},
    "outputs": [],
    "source": [
     "# Escribir aqui la solucion\n",
+    "\n",
     "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 12,
    "id": "3f57f73c-5958-4fc8-baae-9864edefb48f",
    "metadata": {},
    "outputs": [
@@ -293,7 +294,7 @@
        "Name: Precio, dtype: float64"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -305,31 +306,9 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "id": "741e2556-1f9f-4c62-af63-b92f9e3ec9d8",
-   "metadata": {},
-   "source": [
-    "Ahora reemplazaremos los valores faltantes. Los reemplazaremos por valores que creamos convenientes. Utilizaremos la funcion **fillna()** de las columnas de pandas: "
-   ]
-  },
-  {
    "cell_type": "code",
-   "execution_count": 7,
-   "id": "30168e5a-783d-4b2a-9641-2ef5cf3cdefb",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# reemplazamos los valores faltantes de la columna Color por 'Gris'\n",
-    "df.Color = df.Color.fillna('Gris')\n",
-    "\n",
-    "# reemplazamos los valores faltantes de la columna Desbloqueado por True\n",
-    "df.Desbloqueado = df.Desbloqueado.fillna(False)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
-   "id": "94f7f64c-d8d4-40e0-b03a-058e84fc6dd2",
+   "execution_count": 13,
+   "id": "15ac0bf5-eafe-40c9-b2b2-5574c2f856ec",
    "metadata": {},
    "outputs": [
     {
@@ -363,258 +342,132 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>256</td>\n",
-       "      <td>Gris</td>\n",
        "      <td>False</td>\n",
-       "      <td>Reacondicionado</td>\n",
-       "      <td>461.99</td>\n",
+       "      <td>False</td>\n",
+       "      <td>True</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>256</td>\n",
-       "      <td>Gris</td>\n",
        "      <td>False</td>\n",
-       "      <td>&lt;NA&gt;</td>\n",
-       "      <td>294.84</td>\n",
+       "      <td>False</td>\n",
+       "      <td>True</td>\n",
+       "      <td>True</td>\n",
+       "      <td>False</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>64</td>\n",
-       "      <td>Gris</td>\n",
-       "      <td>True</td>\n",
-       "      <td>Reacondicionado</td>\n",
-       "      <td>419.99</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>512</td>\n",
-       "      <td>Oro</td>\n",
        "      <td>False</td>\n",
-       "      <td>Reacondicionado</td>\n",
-       "      <td>535.00</td>\n",
+       "      <td>False</td>\n",
+       "      <td>True</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>256</td>\n",
-       "      <td>Gris</td>\n",
        "      <td>False</td>\n",
-       "      <td>&lt;NA&gt;</td>\n",
-       "      <td>499.00</td>\n",
+       "      <td>True</td>\n",
+       "      <td>True</td>\n",
+       "      <td>True</td>\n",
+       "      <td>False</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>5</th>\n",
-       "      <td>256</td>\n",
-       "      <td>Verde</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
        "      <td>True</td>\n",
-       "      <td>&lt;NA&gt;</td>\n",
-       "      <td>234.92</td>\n",
+       "      <td>False</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>6</th>\n",
-       "      <td>256</td>\n",
-       "      <td>Gris</td>\n",
+       "      <td>False</td>\n",
        "      <td>True</td>\n",
-       "      <td>Muy bueno</td>\n",
-       "      <td>469.82</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>7</th>\n",
-       "      <td>256</td>\n",
-       "      <td>Gris</td>\n",
+       "      <td>False</td>\n",
        "      <td>True</td>\n",
-       "      <td>Bueno</td>\n",
-       "      <td>422.60</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "   Memoria  Color  Desbloqueado           Estado  Precio\n",
-       "0      256   Gris         False  Reacondicionado  461.99\n",
-       "1      256   Gris         False             <NA>  294.84\n",
-       "2       64   Gris          True  Reacondicionado  419.99\n",
-       "3      512    Oro         False  Reacondicionado  535.00\n",
-       "4      256   Gris         False             <NA>  499.00\n",
-       "5      256  Verde          True             <NA>  234.92\n",
-       "6      256   Gris          True        Muy bueno  469.82\n",
-       "7      256   Gris          True            Bueno  422.60"
+       "   Memoria  Color  Desbloqueado  Estado  Precio\n",
+       "0    False  False          True   False   False\n",
+       "1    False  False          True    True   False\n",
+       "2    False  False         False   False   False\n",
+       "3    False  False          True   False   False\n",
+       "4    False   True          True    True   False\n",
+       "5    False  False         False    True   False\n",
+       "6    False   True         False   False   False\n",
+       "7    False   True         False   False   False"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "4055d7d0-a267-40c2-901c-d5c3c75016f8",
-   "metadata": {},
-   "source": [
-    "### Ejercicio 2:\n",
-    "    \n",
-    "Reemplazar los valores faltantes de la columna Estado por 'Bueno':"
+    "pd.isna(df)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
-   "id": "528fbeef-1cda-4123-a582-36de1eefe19d",
+   "execution_count": null,
+   "id": "94f7f64c-d8d4-40e0-b03a-058e84fc6dd2",
    "metadata": {},
    "outputs": [],
-   "source": [
-    "# Escribir aqui la solucion\n",
-    "\n"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
+   "id": "de3d149a-b4ff-4d06-8077-0ea1dbcf40e7",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "6f6f2d09-33b1-49ba-a7c8-d03cc99b4170",
    "metadata": {},
    "outputs": [],
-   "source": [
-    "#@title Solucion Ejercicio 2 {display-mode:\"form\"}\n",
-    "\n",
-    "# reemplazamos los valores faltantes de la columna Estado por 'Bueno'\n",
-    "df.Estado = df.Estado.fillna('Bueno')"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "id": "b2f0f9fc-aabc-4a26-bc77-27735b4f2d68",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>Memoria</th>\n",
-       "      <th>Color</th>\n",
-       "      <th>Desbloqueado</th>\n",
-       "      <th>Estado</th>\n",
-       "      <th>Precio</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>256</td>\n",
-       "      <td>Gris</td>\n",
-       "      <td>False</td>\n",
-       "      <td>Reacondicionado</td>\n",
-       "      <td>461.99</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>256</td>\n",
-       "      <td>Gris</td>\n",
-       "      <td>False</td>\n",
-       "      <td>Bueno</td>\n",
-       "      <td>294.84</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>64</td>\n",
-       "      <td>Gris</td>\n",
-       "      <td>True</td>\n",
-       "      <td>Reacondicionado</td>\n",
-       "      <td>419.99</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>512</td>\n",
-       "      <td>Oro</td>\n",
-       "      <td>False</td>\n",
-       "      <td>Reacondicionado</td>\n",
-       "      <td>535.00</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>256</td>\n",
-       "      <td>Gris</td>\n",
-       "      <td>False</td>\n",
-       "      <td>Bueno</td>\n",
-       "      <td>499.00</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>5</th>\n",
-       "      <td>256</td>\n",
-       "      <td>Verde</td>\n",
-       "      <td>True</td>\n",
-       "      <td>Bueno</td>\n",
-       "      <td>234.92</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>6</th>\n",
-       "      <td>256</td>\n",
-       "      <td>Gris</td>\n",
-       "      <td>True</td>\n",
-       "      <td>Muy bueno</td>\n",
-       "      <td>469.82</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>7</th>\n",
-       "      <td>256</td>\n",
-       "      <td>Gris</td>\n",
-       "      <td>True</td>\n",
-       "      <td>Bueno</td>\n",
-       "      <td>422.60</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "   Memoria  Color  Desbloqueado           Estado  Precio\n",
-       "0      256   Gris         False  Reacondicionado  461.99\n",
-       "1      256   Gris         False            Bueno  294.84\n",
-       "2       64   Gris          True  Reacondicionado  419.99\n",
-       "3      512    Oro         False  Reacondicionado  535.00\n",
-       "4      256   Gris         False            Bueno  499.00\n",
-       "5      256  Verde          True            Bueno  234.92\n",
-       "6      256   Gris          True        Muy bueno  469.82\n",
-       "7      256   Gris          True            Bueno  422.60"
-      ]
-     },
-     "execution_count": 11,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "df"
-   ]
+   "outputs": [],
+   "source": []
   },
   {
-   "cell_type": "markdown",
-   "id": "fabcbcce-f449-488d-8d26-f8438cd9f004",
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "8b825cd4-0709-42bd-8465-d85051cffafe",
    "metadata": {},
-   "source": [
-    "Ahora que ya tenemos la tabla completa el proximo paso es convertir todos los datos de cada columna a numeros."
-   ]
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
@@ -655,6 +508,16 @@
    "metadata": {},
    "outputs": [],
    "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "30168e5a-783d-4b2a-9641-2ef5cf3cdefb",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df.Color.fillna('Gris')"
+   ]
   },
   {
    "cell_type": "markdown",
