Added datascience units

--- a/cursos/espanol/datascience/0_intro.ipynb
+++ b/cursos/espanol/datascience/0_intro.ipynb
@@ -123,21 +123,23 @@
    "id": "099a3659-8475-4a91-9163-994643564285",
    "metadata": {},
    "source": [
-    "## La ciencia de datos nos permite automatizar todo este proceso y realizarlo cuando la cantidad de datos son millones.\n",
+    "### La ciencia de datos nos permite automatizar todo este proceso y realizarlo cuando la cantidad de datos son millones.\n",
     "\n",
     "Algunos ejemplos del uso de la ciencia de datos que podemos ver hoy son:\n",
-    "- Adivinar el costo final de una casa\n",
+    "- Adivinar el mejor valor de venta de una casa\n",
     "- Adivinar si a alguien le va a gustar una pelicula o no\n",
     "- Adivinar si alguien va a devolver un credito o no\n",
     "- Adivinar cuanto gastara el próximo mes una persona\n",
     "- Adivinar cuantos viajes hara un taxi en su horario de trabajo\n",
-    "- Adivinar la palabra que falta en un texto examen ingles\n",
+    "- Adivinar la palabra que falta en un texto de examen de ingles\n",
     "- Adivinar sobre que tema habla un texto\n",
     "- Adivinar si una compra con tarjeta de credito es fraude\n",
-    "- Adivinar la edad de una persona\n",
+    "- Adivinar la edad de una persona mediante una fotografia\n",
     "- Adivinar si el semaforo esta rojo o verde\n",
     "- Adivinar si a alguien le va a gustar un producto o no\n",
-    "- ..."
+    "- ...\n",
+    "\n",
+    "Siempre que decimos adivinar esto no es seguro sino que hay siempre una probabilidad de equivocarse."
    ]
   },
   {
@@ -145,7 +147,7 @@
    "id": "20ef1fef-1471-4193-8f3d-58c13a97abf0",
    "metadata": {},
    "source": [
-    "### El Proceso del Machine Learning consta de los siguientes pasos:\n",
+    "## En resumen el Proceso del Machine Learning consta de los siguientes pasos:\n",
     "\n",
     "1. Entender el problema\n",
     "2. Obtener los datos\n",
@@ -153,7 +155,7 @@
     "4. Separar dicha tabla en dos tablas una de Entrenamiento (Train) y otra de Prueba (Test)\n",
     "5. Pasarle la tabla de Entrenamiento a una caja negra (esta caja negra contiene un algoritmo de ML)\n",
     "6. Una vez entrenada la caja negra pasarle la tabla de Prueba\n",
-    "7. Medir que tan buenas son las predicciones de la caja negra\n",
+    "7. Medir que tan buenas son las predicciones de la caja negra en ambas tablas (Entrenamiento y Test)\n",
     "8. Si las predicciones son lo suficientemente buenas utilizar esta caja negra entrenada para predecir nuevos valores\n",
     "\n",
     "**En las siguientes unidades veremos como implementarlo paso a paso**"
