--- a/cursos/espanol/datascience/1_pandas.ipynb
+++ b/cursos/espanol/datascience/1_pandas.ipynb
@@ -40,7 +40,7 @@
    "id": "a1b506c4-d856-4b62-a433-9eb993f2b602",
    "metadata": {},
    "source": [
-    "Primero importamos la libreria de pandas con la palabra **import** y con la palabra **as** decimos que en adelante vamos a llamarla con el nombre abreviado **pd** que ya casi se ha convertido en un estandard porque la mayoria la llama asi"
+    "Primero importamos la libreria de pandas con la palabra **import** y con la palabra **as** decimos que en adelante vamos a llamarla con el nombre abreviado **pd** que ya casi se ha convertido en un estandar porque la mayoria la llama asi pero la podriamos llamar como queramos"
    ]
   },
   {
@@ -613,48 +613,18 @@
    "id": "fabcbcce-f449-488d-8d26-f8438cd9f004",
    "metadata": {},
    "source": [
-    "Ahora que ya tenemos la tabla completa el proximo paso es convertir todos los datos de cada columna a numeros."
+    "Ahora que ya tenemos la tabla completa el proximo paso es convertir todos los datos de cada columna a numeros. Esto lo veremos en la unidad siguiente pero antes de eso guardaremos nuestra tabla completa en un archivo de texto separado por comas:"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "fe2e8877-5222-46dc-91b1-1134832c9002",
+   "execution_count": 15,
+   "id": "9c445e76-2170-4dba-86ae-fba8c6ba1339",
    "metadata": {},
    "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "bd2e8ae5-ae4b-4920-8779-395c861aa8c5",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "95b50caf-a7e5-4b66-b942-b72670623cb1",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "d41e984e-8cba-4b78-8b6b-9fed4a86f0f6",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "054370e5-7339-47fe-b508-86d09ef087a0",
-   "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "df.to_csv(\"tabla_telefonos.csv\", index=False)"
+   ]
   },
   {
    "cell_type": "markdown",
